--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
 </head>
 <body>
     <section>
-        
+        <nav>
+            <img src="assets/logo.png" alt="Logo de página">
+            <ul>
+                <li><a href="#concept">CONCEPTO</a></li>
+                <li><a href="#">FOTOS</a></li>
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">RESERVAS</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACTO</a></li>
+            </ul>
+        </nav>
+
+        <main>
+            <p>Descubre</p>
+            <h1>MozzaBar</h1>
+            <h2>Nuestra carta</h2>
+        </main>
+
     </section>
+    <section>
+        <main>
+            <h2 id="concept">CONCEPTO</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse similique maiores, laudantium, itaque distinctio fugiat sint provident libero odit veritatis impedit! Ipsam error illo, aliquid consectetur voluptate nisi exercitationem maiores.</p>
+            <p></p>
+            <p></p>
+        </main>
+    </section>
+
+
+
 </body>
 </html>
