--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#concept">CONCEPTO</a></li>
                 <li><a href="#galery">FOTOS</a></li>
-                <li><a href="#menu">MENU</a></li>
+                <li><a href="#carta">CARTA</a></li>
                 <li><a href="#list">RESERVAS</a></li>
                 <li><a href="#news">BLOG</a></li>
                 <li><a href="#">CONTACTO</a></li>
@@ -44,9 +44,25 @@
                 minima. Impedit quisquam facilis officiis 
             </P>
         </main>
-
     </section>
 
+    <section class="galery">
+        <main class="galery" id="galery">
+            <img src="/assets/food.jpg" alt="Alimentos">
+            <img src="/assets/cafe.jpg" alt="Café">
+            <img src="/assets/coronita.jpg" alt="Comida rápida">
+            <img src="/assets/desserts.jpg" alt="Postres">
+            <img src="/assets/beer.jpg" alt="Cerveza"> 
+            <img src="/assets/meal.jpg" alt="Batidos">
+            <img src="/assets/rice-balls.jpg" alt="Arroz">
+        </main>
+    </section>
+
+    <section class="carta">
+        <main class="carta">
+            <h2 id="carta">CARTA</h2>
+        </main>
+    </section>
 
 </body>
 </html>
